asm_tests/other_testfiles/invalid_files/error50.s
.name ;"MORO"
.comment "MORJESTA!"

live %12
